--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,35 @@
+mkdocs
+mkdocs-material
+mkdocs-glightbox
+mkdocs-git-authors-plugin
+mkdocs-git-revision-date-plugin
+mkdocs-git-committers-plugin
+mkdocstrings
+mike
+mkdocs-jupyter
+mkdocs-git-committers-plugin-2
+mkdocs-git-revision-date-localized-plugin
+mkdocs-redirects
+mkdocs-material-extensions
+mkdocs-simple-hooks
+mkdocs-awesome-pages-plugin
+mkdocs-versioning
+mkdocs-mermaid2-plugin
+mkdocs-include-markdown-plugin
+mkdocs-enumerate-headings-plugin
+mkdocs-autolinks-plugin
+mkdocs-minify-html-plugin
+mkdocs-autolinks-plugin
 
-torch>=2.1.1,<3.0
-transformers>=4.39.0,<5.0.0
-asyncio>=3.4.3,<4.0
-toml
-pypdf==5.1.0
-ratelimit==2.2.1
-loguru
-pydantic==2.8.2
-tenacity
-rich
-psutil
-sentry-sdk
-python-dotenv
-PyYAML
-docstring_parser==0.16
-black>=23.1,<25.0
-ruff>=0.0.249,<0.4.5
-types-toml>=0.10.8.1
-types-pytz>=2023.3,<2025.0
-types-chardet>=5.0.4.6
-mypy-protobuf>=3.0.0
-pytest>=8.1.1
-pandas>=2.2.2
-networkx
-aiofiles
-clusterops
-reportlab
-doc-master
+# Requirements for core
+jinja2~=3.1
+markdown~=3.7
+mkdocs-material-extensions~=1.3
+pygments~=2.18
+pymdown-extensions~=10.12
+
+# Requirements for plugins
+babel~=2.16
+colorama~=0.4
+paginate~=0.5
+regex>=2022.4
